modified:   index.html 	modified:   script.js 	renamed:    style.css -> styles.css

--- a/index.html
+++ b/index.html
@@ -17,9 +17,15 @@
         <span id="colOutput">16</span>
 
         <input type="color" id="color" value="#ff0000">
+
         <label for="random">
             <input type="checkbox" id="random"> Random Colors
         </label>
+
+        <!-- New Toggle for Hover Mode -->
+        <label for="hoverMode">Enable Hover Mode:</label>
+        <input type="checkbox" id="hoverMode" checked>
+
         <button class="btn">Reset Grid</button>
     </div>
 
